infrastructure/argocd/aniq-runners-list-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aniq-runners-list-api
  namespace: aniq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aniq-runners-list-api
  template:
    metadata:
      labels:
        app: aniq-runners-list-api
    spec:
      containers:
      - name: aniq-runners-list-api
        image: adhasahar/runners-list-api:e832cd2615ac7df623d421293ee68484f7e0b3f3
