infrastructure/argocd/aniq-runners-list-api/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: aniq
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
