infrastructure/argocd/aniq-runners-list-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aniq-runners-list-api
  namespace: aniq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: aniq.adhshr.xyz
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: aniq-runners-list-api
            port:
              number: 80
